# ipl-config

./: .bandit  .coveragerc  .flake8  .gitignore  .pylintrc  Makefile  README.md  codecov.yml  mypy.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
examples/: .env  config_example.json  config_example.tf  config_example.toml  config_example.yaml  config_yaml_dump.py
ipl_config/: __init__.py  _optional_libs.py  dumploads.py  settings.py  source.py  utils.py
tests/: .env  conftest.py  test_dump.py  test_load.py  test_source.py  test_utils.py  utils.py
