[tool.poetry]
name = "ipl-config"
version = "0.1.8"
description = "InPlat config adapters"
authors = ["InPlat", "Valentin Nagornyy <valentin.nagornyy@inplat.ru>"]
repository = "https://github.com/koi8-r/ipl-config"
readme = "README.md"
license = "MIT"
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.10',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Intended Audience :: Developers',
  'Intended Audience :: Information Technology',
  'Intended Audience :: System Administrators',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Internet',
]
keywords = [
  "config", "settings", "pydantic",
  "json", "toml", "yaml", "hcl2",
]

[tool.poetry.dependencies]
python = "^3.7.2"
python-dotenv = {version = "^0.21.0", optional = true}
pyyaml = {version = ">=5.0, <7.0", optional = true}
toml = {version = "^0.10.2", optional = true}
python-hcl2 = {version = "^3.0.5", optional = true}
pydantic = "^1.10.2"
typing-extensions = { version = "^4.3.0", python = "<3.8" }

[tool.poetry.extras]
dotenv = ["python-dotenv"]
yaml = ["pyyaml"]
toml = ["toml"]
hcl2 = ["python-hcl2"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
flake8-import-order = "^0.18.1"
flake8-comprehensions = "^3.10.0"
flake8-bugbear = "^22.9.11"
flake8-mutable = "^1.2.0"
pep8-naming = "^0.13.2"
pylint = "^2.15.2"
bandit = "^1.7.4"
black = "^22.8.0"
coverage = "^6.4.4"
safety = "^2.1.1"
mypy = "^0.971"


[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.black]
line-length = 79
skip-string-normalization=true
skip-magic-trailing-comma=true

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma=true
lines_after_imports = 2
